--- a/src/templates/screens/QueryList.vm
+++ b/src/templates/screens/QueryList.vm
@@ -1,42 +1,51 @@
-<div class="app" id="querylist">
 $page.setTitle("Stored query list")
+
+<div class="app" id="querylist">
+
 <h2>$page.Title</h2>
 #set ($module = $scarabR.CurrentModule)
 #set ($user = $data.User)
 #set ($noQueries = "false")
+
 #if (($module.getPrivateQueries($user).isEmpty()) && ($module.GlobalQueries.isEmpty()))
  #set ($noQueries = "true")
 #end
+
 #if ($noQueries.equals("true"))
  <p><strong class="alert">There are no stored queries.
  Please go to <a href="$link.setPage("AdvancedQuery.vm")">Advanced query</a>
  to create a new stored query.</strong></p>
 #else
-#set ($action = $link.setPage("QueryList.vm").setAction("QueryList").addPathInfo("nextTemplate", "QueryList.vm"))
+
+#set ($action = $link.setPage("QueryList.vm").setAction("QueryList").addPathInfo("nextTemplate", "QueryList.vm").toString())
 <form method="post" action="$action">
 
-<div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
+<div class="functnbar">
+ <table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild"><div>
-General functions
-</div>
-<input type="submit" value="Save" name="eventSubmit_doSavefrequencies" />&nbsp;
-   <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&nbsp;
+  <td class="firstchild">
+  <div>General functions</div>
+   <input type="submit" value="Save" name="eventSubmit_doSavefrequencies" />&#160;
+   <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&#160;
    <input type="submit" value="New" name="eventSubmit_doNewquery" />
-</td>
-  <td><div>
-Select list item(s) to
-</div><input type="submit" value="copy" name="eventSubmit_doCopyquery" />&nbsp;
+  </td>
+  <td>
+  <div>Select list item(s) to</div>
+  <input type="submit" value="copy" name="eventSubmit_doCopyquery" />&#160;
   #if ($security.hasPermission("Item | Delete") || !$module.getPrivateQueries($user).isEmpty())
-   <input type="submit" value="Delete" name="eventSubmit_doDeletequeries" />
+   <input type="submit" value="Delete" name="eventSubmit_doDeletequeries" />&#160;
   #end
-  &nbsp;<input type="submit" value="Subscribe" name="eventSubmit_doSubscribe" />&nbsp;
-  <input type="submit" value="Unsubscribe" name="eventSubmit_doUnsubscribe" /></td>
+  <input type="submit" value="Subscribe" name="eventSubmit_doSubscribe" />&#160;
+  <input type="submit" value="Unsubscribe" name="eventSubmit_doUnsubscribe" />
+  </td>
  </tr>
  </table>
 </div>
+
 ##   <p>&#171; previous | 1 of 1 | next &#187; </p>
+
 <p><b>Click on location to execute. Click query name to edit.</b></p>
+
 <h3>Saved Queries</h3>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
  <tr>
@@ -44,20 +53,20 @@ Select list item(s) to
   <img src="/scarab/images/icon_uparrow.gif" width="13" height="8" alt="sort ascending" title="sort ascending" border="0" />
   <img src="/scarab/images/icon_downarrow.gif" width="13" height="8" alt="sort descending" title="sort descending" border="0" />
   </th>
-  <th>Subscr</th>
-  <th>Subscr frequency</th>
+  <th>Subscription</th>
+  <th>Subscription frequency</th>
   <th>Query name</th>
   <th>Query description</th>
   <th>Location</th>
-  <th>Initiated by</th>
+  <th>Initiated By</th>
  </tr>
  #foreach ( $query in $module.getPrivateQueries($user) )
   #indexedRows($velocityCount)
   <td><input type="checkbox" name="action_$query.QueryId" /></td>
-  <td>&nbsp;</td>
-  <td>&nbsp;</td>
+  <td>&#160;</td>
+  <td>&#160;</td>
   <td><a href="$query.getEditLink($link.setPage("EditQuery.vm").toString())">$query.Name</a></td>
-  <td>#if($query.Description)  $query.Description #else &nbsp; #end</td>
+  <td>#if($query.Description)  $query.Description #else &#160; #end</td>
   <td><a href="$query.getExecuteLink($link.setPage("IssueList.vm").toString())">$query.QueryType.Name</a>
   #if (!$query.Approved)
    (until approved)
@@ -67,20 +76,21 @@ Select list item(s) to
   <td><a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a></td>
   </tr>
  #end
+
  #foreach ( $query in $module.GlobalQueries )
   #indexedRows($velocityCount)
   <td>
    #if ($user.UserId)
     <input type="checkbox" name="action_$query.QueryId" /></td>
    #else
-    &nbsp;
+    &#160;
    #end
   </td>
   <td>
    #if ($user.UserId)
     #if ($query.isUserSubscribed($user.UserId)) y #else n #end</td>
    #else
-    &nbsp;
+    &#160;
    #end
   </td>
   <td>
@@ -94,15 +104,16 @@ Select list item(s) to
     #frequencySelectBox ($query $id)
     </select>
    #else
-    &nbsp;
+    &#160;
    #end
   </td>
+
   #if ($security.hasPermission("Item | Approve"))
    <td><a href="$query.getEditLink($link.setPage("EditQuery.vm").toString())">$query.Name</a></td>
   #else
    <td>$query.Name</td>
   #end
-  <td>#if($query.Description)  $query.Description #else &nbsp; #end</td>
+  <td>#if($query.Description) $query.Description #else &#160; #end</td>
   <td><a href="$query.getExecuteLink($link.setPage("IssueList.vm").toString())">$query.QueryType.Name</a>
   #if (!$query.Approved)
    (until approved)
@@ -113,29 +124,32 @@ Select list item(s) to
   </tr>
  #end
 </table>
+
 ##    <p>&#171; previous | 1 of 1 | next &#187; </p>
+
 #if ($user.UserId)
-<div class="functnbar2"><table cellpadding="4" cellspacing="0" border="1">
+<div class="functnbar2">
+ <table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild"><div>
-General functions
-</div>
-<input type="submit" value="Save" name="eventSubmit_doSavefrequencies" />&nbsp;
-   <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&nbsp;
+  <td class="firstchild">
+  <div>General functions</div>
+   <input type="submit" value="Save" name="eventSubmit_doSavefrequencies" />&#160;
+   <input type="submit" value="Cancel" name="eventSubmit_doCancel" />&#160;
    <input type="submit" value="New" name="eventSubmit_doNewquery" />
-</td>
-  
-  <td><div>
-Select list item(s) to
-</div><input type="submit" value="copy" name="eventSubmit_doCopyquery" />&nbsp;
+  </td>
+  <td>
+  <div>Select list item(s) to</div>
+  <input type="submit" value="copy" name="eventSubmit_doCopyquery" />&#160;
   #if ($security.hasPermission("Item | Delete") || !$module.getPrivateQueries($user).isEmpty())
-   <input type="submit" value="Delete" name="eventSubmit_doDeletequeries" />
+   <input type="submit" value="Delete" name="eventSubmit_doDeletequeries" />&#160;
   #end
-  &nbsp;<input type="submit" value="Subscribe" name="eventSubmit_doSubscribe" />&nbsp;
-  <input type="submit" value="Unsubscribe" name="eventSubmit_doUnsubscribe" /></td>
+  <input type="submit" value="Subscribe" name="eventSubmit_doSubscribe" />&#160;
+  <input type="submit" value="Unsubscribe" name="eventSubmit_doUnsubscribe" />
+  </td>
  </tr>
  </table>
-</div>#end
+</div>
+#end
 </form>
 #end
 </div>
