--- a/src/templates/screens/RegisterConfirm.vm
+++ b/src/templates/screens/RegisterConfirm.vm
@@ -44,8 +44,14 @@ back to the Registration page.
 </div>
 
 <div class="functnbar2">
-<input type="submit" name="eventSubmit_doBack" value="Back" />
+<table cellpadding="4" cellspacing="0" border="1">
+ <tr>
+  <td class="firstchild">
+<input type="submit" name="eventSubmit_doBack" value="Back" />&#160;
 <input type="submit" name="eventSubmit_doConfirmRegistration" value="Confirm registration" />
+  </td>
+ </tr>
+</table>
 </div>
 
 </form>
