--- a/src/templates/screens/SaveQuery.vm
+++ b/src/templates/screens/SaveQuery.vm
@@ -1,20 +1,29 @@
-<div id="savequery" class="app">
-#set ($action = $link.setPage("SaveQuery.vm").setAction("Search").addPathInfo("nextTemplate", "QueryList.vm"))
+$page.setTitle("Save Query")
+
+#set ($action = $link.setPage("SaveQuery.vm").setAction("Search").addPathInfo("nextTemplate", "QueryList.vm").toString())
 #set ($query = $scarabR.Query)
 #set ($queryGroup = $intake.Query.mapTo($query))
 #set ($user = $data.User)
 #set ($module = $scarabR.CurrentModule)
 #set ($queryString = $data.Parameters.getString("queryString"))
+
+<div id="savequery" class="app">
+
+#if ($queryString)
 <form method="post" action="$action" >
 <input type="hidden" name="$queryGroup.Value.Key" value="$queryString" />
-#if ($queryString)
+
 <div class="functnbar">
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild"><input type="submit" value="Save/submit" name="eventSubmit_doSavequery" />&#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel"  /></td>
+  <td class="firstchild">
+  <input type="submit" value="Save/submit" name="eventSubmit_doSavequery" />&#160;
+  <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
+  </td>
   </tr>
  </table>
 </div>
+
 <h3>Save Your Query</h3>
 <div class="axial">
  <table cellpadding="3" cellspacing="2" border="0">
@@ -32,22 +41,31 @@
    </td>
   </tr>
   <tr>
-   <th width="120">Location</th>
-   <td>current project '$module.Name'</td>
-   <input type = "hidden" name="$queryGroup.ModuleId.Key" value = "$module.ModuleId" /></td>
+   <th width="120">Module</th>
+   <td>$module.Name</td>
+   <input type = "hidden" name="$queryGroup.ModuleId.Key" value = "$module.ModuleId" />
   </tr>
  </table>
 </div>
+
 <div class="functnbar2">
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
-  <td class="firstchild"><input type="submit" value="Save/submit" name="eventSubmit_doSavequery" />&#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel"  /></td>
-        </tr>
-       </table>
-      </div>
+  <td class="firstchild">
+  <input type="submit" value="Save/submit" name="eventSubmit_doSavequery" />&#160;
+  <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
+  </td>
+ </tr>
+</table>
+</div>
+
 $intake.declareGroups()
-#else
-  <p><strong class="alert">No query to save. Please <a href="$link.setPage("AdvancedQuery.vm")">enter a query.</a></strong></p>
-#end
 </form>
+#else
+
+  <p><strong class="alert">No query to save. Please <a
+  href="$link.setPage("AdvancedQuery.vm")">enter a
+  query.</a></strong></p>
+
+#end
 </div>
