--- a/src/templates/screens/admin/GlobalAttributeEdit.vm
+++ b/src/templates/screens/admin/GlobalAttributeEdit.vm
@@ -1,26 +1,33 @@
 $page.setTitle("Attribute/options editor")
+
 #set ($module = $scarabR.CurrentModule)
 #set ($attribute = $scarabR.Attribute)
 #set ($attType = $attribute.AttributeType)
 #set ($attgroup = $intake.Attribute.Default )
 #set ($atttgroup = $intake.AttributeType.Default )
+
 <div class="app" id="div3-0-2-0">
 <h2>$page.Title</h2>
+
 <p>
 On this screen, one can modify system wide Attribute information.
 </p>
+
 <p>
 Back to <a href="$link.setPage("admin,GlobalAttributeShow.vm")">Global Attribute Show</a>
 </p>
+
 <form action="$link.setPage("admin,GlobalAttributeEdit.vm")" method="get">
-    <input type="hidden" name="action" value="admin.GlobalAttributes" />
-    <input type="hidden" name="nextTemplate" value="admin,GlobalAttributeEdit.vm" />
-    <input type="hidden" name="$attgroup.Id.Key" value="$!attgroup.Id" />
-#datatitle ( "Attribute Info" )
+<input type="hidden" name="action" value="admin.GlobalAttributes" />
+<input type="hidden" name="nextTemplate" value="admin,GlobalAttributeEdit.vm" />
+<input type="hidden" name="$attgroup.Id.Key" value="$!attgroup.Id" />
+
+<h3>Attribute Info</h3>
+
 <div class="axial">
 <table cellpadding="3" cellspacing="2" border="0">
  <tr>
-  <th width="120">Input type</th>
+  <th>Input type</th>
   <td>
     <select name="$atttgroup.AttributeTypeId.Key" size="1">
     #foreach ( $atype in $attribute.AllAttributeTypes )
@@ -29,14 +36,14 @@ Back to <a href="$link.setPage("admin,GlobalAttributeShow.vm")">Global Attribute
     </select>
   </td>
  <tr>
-  <th width="120">Attribute name</th>
+  <th>Attribute name</th>
   <td>
     <input type="text" name="$attgroup.Name.Key" value="$!attribute.Name" />
     #fieldErrorMsg($attgroup.Name "")
   </td>
  </tr>
  <tr>
-  <th width="120">Attribute description</th>
+  <th>Attribute description</th>
   <td>
     <textarea rows="4" cols="40" name="$attgroup.Description.Key">$!attribute.Description</textarea>
     #fieldErrorMsg($attgroup.Description "")
@@ -44,7 +51,7 @@ Back to <a href="$link.setPage("admin,GlobalAttributeShow.vm")">Global Attribute
  </tr>
   #if ($attribute.CreatedDate)
  <tr>
-  <th width="120">Created by</th>
+  <th>Created by</th>
   <td>
   #set ($createdUser = $scarabR.getUser($attribute.CreatedBy) )
   <a href="mailto:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
@@ -53,7 +60,7 @@ Back to <a href="$link.setPage("admin,GlobalAttributeShow.vm")">Global Attribute
   #end
   #if ($attribute.CreatedDate)
  <tr>
-  <th width="120">Creation date</th>
+  <th>Creation date</th>
   <td>
     $attribute.CreatedDate
   </td>
@@ -62,22 +69,26 @@ Back to <a href="$link.setPage("admin,GlobalAttributeShow.vm")">Global Attribute
 </tr>
 </table>
 </div>
+
 <div class="functnbar">
 <table cellpadding="4" cellspacing="0" border="1">
-	<tr>
-		<td class="firstchild"><div>
-General info
-</div><input type="submit" name="eventSubmit_doModifyattributedata" value="Save" /> </td></tr>
+    <tr>
+        <td class="firstchild">
+        <div>General info</div>
+        <input type="submit" name="eventSubmit_doModifyattributedata" value="Save" /> 
+        </td>
+    </tr>
 </table>
 </div>
 
 $intake.declareGroups()
 </form>
+
 #if ($attType.AttributeClass.Name.equals("select-one"))
 <form action="$link.setPage("admin,GlobalAttributeEdit.vm")" method="get">
-    <input type="hidden" name="action" value="admin.GlobalAttributes" />
-    <input type="hidden" name="nextTemplate" value="admin,GlobalAttributeEdit.vm" />
-    <input type="hidden" name="$attgroup.Id.Key" value="$!attgroup.Id" />
+<input type="hidden" name="action" value="admin.GlobalAttributes" />
+<input type="hidden" name="nextTemplate" value="admin,GlobalAttributeEdit.vm" />
+<input type="hidden" name="$attgroup.Id.Key" value="$!attgroup.Id" />
 #datatitle ("Attribute Options")
 #set ($pcaos = $attribute.ParentChildAttributeOptions)
 #set ($maxNum = $pcaos.size())
@@ -87,7 +98,7 @@ $intake.declareGroups()
 #if ($maxNum > 0)
  <th>Deleted</th>
 #else
- <th>&nbsp;</th>
+ <th>&#160;</th>
 #end
  <th>Parent attribute option</th>
  <th>Attribute option</th>
@@ -96,26 +107,25 @@ $intake.declareGroups()
 </tr>
 #foreach ($pcao in $pcaos)
     #set ($pcaoGroup = $intake.ParentChildAttributeOption.mapTo($pcao))
-    #if ( $velocityCount % 2 > 0 )<tr class="a">#else<tr class="b">#end
+    #indexedRows($velocityCount)
      <td>#booleanCheckbox ($pcaoGroup.Deleted)</td>
      <td>
      <select name="$pcaoGroup.ParentId.Key">
      #if ($pcao.ParentId.toString().equals("0"))
-        #set ($select = 'selected="true"')
+        <option selected="selected" value="0" />Root
      #else
-        #set ($select = "")
+        <option value="0" />Root
      #end
-     <option value="0" $select>Root</option>
+     <option$select value="0">Root</option>
      #foreach ($parentAttrOption in $attribute.ParentChildAttributeOptions)
-         #if (! $parentAttrOption.Name.equals($pcao.Name) )
+       #if (! $parentAttrOption.Name.equals($pcao.Name) )
          #set ($pcaoGroupTemp = $intake.ParentChildAttributeOption.mapTo($parentAttrOption))
          #if($pcao.ParentId.toString().equals($parentAttrOption.OptionId.toString()))
-            #set ($select = 'selected="true"')
+            <option selected="selected" value="$pcaoGroupTemp.OptionId">$pcaoGroupTemp.Name</option>
          #else
-            #set ($select = "")
+            <option value="$pcaoGroupTemp.OptionId">$pcaoGroupTemp.Name</option>
          #end
-         <option value="$pcaoGroupTemp.OptionId" $select>$pcaoGroupTemp.Name</option>
-         #end
+       #end
      #end
      </select>
      </td>
@@ -130,7 +140,7 @@ $intake.declareGroups()
 #end
 #set ($newPCAO = $scarabR.ParentChildAttributeOption)
 #set ($newPCAOGroup = $intake.ParentChildAttributeOption.mapTo($newPCAO))
-#if ( ($maxNum + 1) % 2 > 0 )<tr class="a">#else<tr class="b">#end
+    #indexedRows($maxNum + 1)
      <td>New</td>
      <td>
      <select name="$newPCAOGroup.ParentId.Key">
@@ -166,17 +176,18 @@ from the database. They can only be marked as deleted and will always
 show up in the list above (but will not show up in the application
 itself). Therefore, please use caution when creating new Attribute
 Options because you can quickly end up with a mess.</strong></p>
+
 <div class="functnbar2">
 <table cellpadding="4" cellspacing="0" border="1">
-	<tr>
-		<td class="firstchild"><div>
-Attribute Options
-</div>
-  <input type="submit" name="eventSubmit_doAddormodifyattributeoptions" value="Save" /> 
-</td>
-</tr>
+  <tr>
+    <td class="firstchild">
+    <div>Attribute Options</div>
+    <input type="submit" name="eventSubmit_doAddormodifyattributeoptions" value="Save" /> 
+    </td>
+  </tr>
 </table>
 </div>
+
 #end #* if select-one *#
 $intake.declareGroups()
 </form>
